html modificado para colocar javasript

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,8 +6,16 @@
 
 </head>
 <body>
+<!-- Comentario o uso de script misturado com a pagina html esta em desuso devido a necessidade de refatoracao constante
+
 	<script>
+		alert("Meu primeiro js");
 	</script>
+-->
+<!-- Forma mais usual -->
+
+<script type="text/javascript" src="js/main.js">
+</script>
 
 </body>
 
