fazendo tabelas de comandos

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,6 +18,47 @@
 
 </script>
 
+ <table style="width:100%">
+  <tr>
+    <th>Funcao</th>
+    <th>PraqueServe</th>
+    <th>Exemplo</th>
+  </tr>
+  <tr>
+    <td>alert</td>
+    <td>Mostra um alerta na tela</td>
+    <td>alert("mensagem de alerta");</td>
+  </tr>
+  <tr>
+    <td>console.log</td>
+    <td>Mostra no console do browser</td>
+    <td>console.log("mostra mensagem no console, bom para debug");</td>
+  </tr>
+<tr>
+<td>toLowerCase()</td>
+<td>Transforma toda a string maiuscula para minuscula</td>
+<td>string.toLowerCase();</td>
+</tr>
+
+<tr>
+<td>toUpperCase()</td>
+<td>Transforma toda a string minuscula para maiuscula</td>
+<td>string.toUpperCase();</td>
+</tr>    
+
+
+
+
+
+
+
+
+
+</table> 
+
+
+
+
 </body>
 
 
