--- a/javascript/index.html
+++ b/javascript/index.html
@@ -46,6 +46,34 @@
 <td>string.toUpperCase();</td>
 </tr>    
 
+<tr>
+<td>Arrays </td>
+<td>Cria uma lista de elementos que podem ser iguais ou diferentes em seus tipos (string, numero, booleano,funcoes,etc...)</td>
+<td>var lista = ["uva","pera"];</td>
+</tr>
+
+<tr>
+<td>Adicionar elemento no Array </td>
+<td>Adiciona um elemento na posicao final do array lista</td>
+<td>lista.push("abacate");</td>
+</tr>
+
+<tr>
+<td>Remove elemento do Array </td>
+<td>Remove um elemento da primeira posicao do array lista</td> 
+<td>lista.pop();</td>
+</tr>
+
+<tr>
+<td>length </td>
+<td>Mostra o tamanho da lista, normalmente a quantidade de elementos da mesma.</td>
+<td>lista.length;</td>
+</tr>
+
+
+
+
+
 
 
 
