--- a/javascript/index.html
+++ b/javascript/index.html
@@ -70,6 +70,18 @@
 <td>lista.length;</td>
 </tr>
 
+<tr>
+<td>reverse </td>
+<td>Faz a lista ficar ao reverso.</td>
+<td>lista.reverse();</td>
+</tr>
+
+<tr>
+<td>toString </td>
+<td>Transforma uma lista em uma string.</td>
+<td>lista.toString();</td>
+</tr>
+
 
 
 
