--- a/javascript/index.html
+++ b/javascript/index.html
@@ -82,6 +82,11 @@
 <td>lista.toString();</td>
 </tr>
 
+<tr>
+<td>join </td>
+<td>Transforma uma lista em uma string com a opç~ao de unir algo ou n~ao.</td>
+<td>lista.join(" - ");</td>
+</tr>
 
 
 
