--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,7 +18,7 @@
 
 </script>
 
-<button type="button" Clique aqui /button>
+<button type="button" onclick="botao"> Clique aqui </button>
 
 
 </body>
