alterando o html com id

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -18,7 +18,9 @@
 
 </script>
 
-<button type="button" onclick="botao"> Clique aqui </button>
+<button type="button" onclick="botao()"> Clique aqui </button>
+<h3 id ="agradecimento"> Bem Vindo </h3>
+
 
 
 </body>
