main.js corrigido

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,7 +19,7 @@
 </script>
 
 <button type="button" onclick="botao()"> Clique aqui </button>
-<h3 id ="agradecimento"> Bem Vindo </h3>
+<h3 id ="agradecimento">Bem Vindo ! </h3>
 
 
 
