--- a/javascript/index.html
+++ b/javascript/index.html
@@ -20,7 +20,7 @@
 
 <button type="button" onclick="botao()"> Clique aqui </button>
 <h3 id ="agradecimento">Bem Vindo ! </h3>
-<p id="redirecionamento" onclick="redirecionar()"></p>
+<p id="redirecionamento" onclick="redirecionar()">Propaganda</p>
 
 
 
