--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -6,20 +6,71 @@
       <title>@@ Curso HTML 5 & CSS3 </title>
     </head>
     <body>
+      <nav>
+        <p>Minha Pagina</p>
+        <ul>
+          <li>SERVIÇOS</li>
+          <li>CLIENTES</li>
+          <li>PARCEIROS</li>
+          <li>TIME</li>
+          <li>CONTATO</li>
+        </ul>
+      </nav>
+
+
       <p>Esse e um paragrafo, meu teclado esta sem acentuaçao.</p>
       <p><b>Texto em negrito.</b></p>
-    </body>
-    <header>
-      <h1>Minha Pagina- tamanho h1</h1>
-      <h2>Pagina web minha pagina- tamanho h2</h2>
-      <h3>Subtitulo minha pagina- tamanho h3</h3>
-      <h4> - tamanho h4</h4>
-      <h5> - tamanho h5</h5>
-      <h6> - tamanho h6</h6>
-      <h7> - tamanho h7 e igual ao paragrafo definido pela tag &ltp&gt </h7>
-    </header>
 
-    <footer>
-      <p>Desenvolvido por Adalberto Caldeira</p>
-    </footer>
+      <header>
+        <h1>Minha Pagina- tamanho h1</h1>
+        <h2>Pagina web minha pagina- tamanho h2</h2>
+        <h3>Subtitulo minha pagina- tamanho h3</h3>
+        <h4> - tamanho h4</h4>
+        <h5> - tamanho h5</h5>
+        <p><h5>
+          Site de Qualidade para sua familia e empresa.
+        </h5></p>
+        <h6> - tamanho h6</h6>
+        <h7> - tamanho h7 e igual ao paragrafo definido pela tag &ltp&gt </h7>
+      </header>
+
+      <section id="servicos">
+        <h2>Serviços</h2>
+        <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
+
+      </section>
+
+      <section id="clientes">
+        <h2>Clientes</h2>
+        <p>Satisfaçao e garantia do serviço</p>
+
+      </section>
+
+      <section id="servicos">
+
+      </section>
+
+      <section id="servicos">
+
+      </section>
+
+      <section id="servicos">
+
+      </section>
+
+
+
+
+
+
+
+
+
+      <footer>
+        <p>Desenvolvido por Adalberto Caldeira</p>
+      </footer>
+
+
+    </body>
+
 </html>
