index e readme modificados

--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -37,6 +37,7 @@
       <section id="servicos">
         <h2>Serviços</h2>
         <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
+        <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" >
 
       </section>
 
