--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -44,18 +44,28 @@
       <section id="clientes">
         <h2>Clientes</h2>
         <p>Satisfaçao e garantia do serviço</p>
+        <img src="images/man-and-woman-near-table-3184465.jpg"
 
       </section>
 
-      <section id="servicos">
+      <section id="parceiros">
+        <h2>Parceiros</h2>
+        <p>Seja nosso parceiro e se junte a nossa super equipe, somar forças possibilita você chegar mais longe.</p>
+        <img src="images/photo-of-people-near-wooden-table-3184418.jpg"
 
       </section>
 
-      <section id="servicos">
+      <section id="time">
+        <h2>Time</h2>
+        <p> Nosso time é formado por profissionais sérios e competentes mais de 500 anos de experiência somados.</p>
+        <img src="images/group-of-women-having-a-meeting-3810754.jpg"
 
       </section>
 
-      <section id="servicos">
+      <section id="contato">
+        <h2>Contato</h2>
+        <p> Entre em contato conosco temos o maior prazer em lhe atender!</p>
+        <img src="images/cellphone-cellular-communication-connection-263564.jpg" >
 
       </section>
 
