--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -37,35 +37,35 @@
       <section id="servicos">
         <h2>Serviços</h2>
         <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
-        <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" >
+        <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width=300px >
 
       </section>
 
       <section id="clientes">
         <h2>Clientes</h2>
         <p>Satisfaçao e garantia do serviço</p>
-        <img src="images/man-and-woman-near-table-3184465.jpg"
+        <img src="images/man-and-woman-near-table-3184465.jpg" width=300px>
 
       </section>
 
       <section id="parceiros">
         <h2>Parceiros</h2>
         <p>Seja nosso parceiro e se junte a nossa super equipe, somar forças possibilita você chegar mais longe.</p>
-        <img src="images/photo-of-people-near-wooden-table-3184418.jpg"
+        <img src="images/photo-of-people-near-wooden-table-3184418.jpg" vwidth=300px>
 
       </section>
 
       <section id="time">
         <h2>Time</h2>
         <p> Nosso time é formado por profissionais sérios e competentes mais de 500 anos de experiência somados.</p>
-        <img src="images/group-of-women-having-a-meeting-3810754.jpg"
+        <img src="images/group-of-women-having-a-meeting-3810754.jpg" width=300px >
 
       </section>
 
       <section id="contato">
         <h2>Contato</h2>
         <p> Entre em contato conosco temos o maior prazer em lhe atender!</p>
-        <img src="images/cellphone-cellular-communication-connection-263564.jpg" >
+        <img src="images/cellphone-cellular-communication-connection-263564.jpg" width=300px >
 
       </section>
 
