--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -51,8 +51,7 @@
       <section id="parceiros">
         <h2>Parceiros</h2>
         <p>Seja nosso parceiro e se junte a nossa super equipe, somar forças possibilita você chegar mais longe.</p>
-        <img src="images/photo-of-people-near-wooden-table-3184418.jpg" vwidth=300px>
-
+        <img src="images/photo-of-people-near-wooden-table-3184418.jpg" width=300px >
       </section>
 
       <section id="time">
