--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -37,7 +37,14 @@
       <section id="servicos">
         <h2>Serviços</h2>
         <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
-        <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width=300px >
+        <div>
+          <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width=300px >
+        </div>
+        <div>
+          <img src="images/mobile-phone-samsung-edge-samsung-galaxy-s6-edge-plus-50614.jpg" width="300px" >
+        </div>
+
+        
 
       </section>
 
