--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -9,20 +9,28 @@
       <nav>
         <p>Minha Pagina</p>
         <ul>
-          <li>SERVIÇOS</li>
-          <li>CLIENTES</li>
-          <li>PARCEIROS</li>
-          <li>TIME</li>
-          <li>CONTATO</li>
+          <li>
+            <a href="#servicos">SERVIÇOS</a>
+          </li>
+          <li>
+            <a href="#clientes">CLIENTES</a>
+          </li>
+          <li>
+            <a href="#parceiros">PARCEIROS</a>
+          </li>
+          <li>
+            <a href="#time">TIME</a>
+          </li>
+          <li>
+            <a href="#contato">CONTATO</a>
+          </li>
         </ul>
       </nav>
 
 
-      <p>Esse e um paragrafo, meu teclado esta sem acentuaçao.</p>
+     <!--<p>Esse e um paragrafo, meu teclado esta sem acentuaçao.</p>
       <p><b>Texto em negrito.</b></p>
-
-      <header>
-        <h1>Minha Pagina- tamanho h1</h1>
+      <h1>Minha Pagina- tamanho h1</h1>
         <h2>Pagina web minha pagina- tamanho h2</h2>
         <h3>Subtitulo minha pagina- tamanho h3</h3>
         <h4> - tamanho h4</h4>
@@ -32,14 +40,22 @@
         </h5></p>
         <h6> - tamanho h6</h6>
         <h7> - tamanho h7 e igual ao paragrafo definido pela tag &ltp&gt </h7>
+    --> 
+
+      <header>
+        <h1>Minha Pagina</h1>
+        <p>Oferecemos Sites de Qualidade para sua família e empresa.</p>
+        
       </header>
 
       <section id="servicos">
         <h2>Serviços</h2>
         <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
+
         <div>
           <img src = "images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width=300px >
         </div>
+
         <div>
           <img src="images/mobile-phone-samsung-edge-samsung-galaxy-s6-edge-plus-50614.jpg" width="300px" >
         </div>
@@ -51,27 +67,41 @@
       <section id="clientes">
         <h2>Clientes</h2>
         <p>Satisfaçao e garantia do serviço</p>
-        <img src="images/man-and-woman-near-table-3184465.jpg" width=300px>
+
+        <div>
+          <img src="images/man-and-woman-near-table-3184465.jpg" width=300px>
+        </div>
+        
 
       </section>
 
       <section id="parceiros">
         <h2>Parceiros</h2>
         <p>Seja nosso parceiro e se junte a nossa super equipe, somar forças possibilita você chegar mais longe.</p>
+
+        <div>          
         <img src="images/photo-of-people-near-wooden-table-3184418.jpg" width=300px >
+        </div>
+
       </section>
 
       <section id="time">
         <h2>Time</h2>
         <p> Nosso time é formado por profissionais sérios e competentes mais de 500 anos de experiência somados.</p>
+
+        <div>
         <img src="images/group-of-women-having-a-meeting-3810754.jpg" width=300px >
+        </div>
 
       </section>
 
       <section id="contato">
         <h2>Contato</h2>
         <p> Entre em contato conosco temos o maior prazer em lhe atender!</p>
+
+        <div>          
         <img src="images/cellphone-cellular-communication-connection-263564.jpg" width=300px >
+        </div>
 
       </section>
 
