--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>@@ Curso HTML 5 & CSS3 </title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
