--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <p>Minha Pagina</p>
+    <p>Minha Página</p>
     <ul>
       <li>
         <a href="#servicos">SERVIÇOS</a>
@@ -46,14 +46,17 @@
     -->
 
   <header>
-    <h1>Minha Pagina</h1>
+    <h1>Minha Página</h1>
     <p>Oferecemos Sites de Qualidade para sua família e empresa.</p>
 
   </header>
 
   <section id="servicos">
     <h2>SERVIÇOS</h2>
-    <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos</p>
+    <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos, 
+      somos uma empresa moderna e arrojada, temos promoções especiais para o seu primeiro 
+      trabalho na web, venha com a sua idéia, desenvolvemos o seu projeto com um custo genial, 
+      faça uma reunião online e já feche o contrato conosco, prazer em servir da maneira correta.</p>
 
     <div>
       <img src="images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width="300px">
