layout simples feito em html e css
Realizado o estudo básico do html e css3 para páginas web

--- a/html5_CSS3/index.html
+++ b/html5_CSS3/index.html
@@ -9,26 +9,33 @@
 </head>
 
 <body>
-  <nav>
-    <p>Minha Página</p>
-    <ul>
-      <li>
-        <a href="#servicos">SERVIÇOS</a>
-      </li>
-      <li>
-        <a href="#clientes">CLIENTES</a>
-      </li>
-      <li>
-        <a href="#parceiros">PARCEIROS</a>
-      </li>
-      <li>
-        <a href="#time">TIME</a>
-      </li>
-      <li>
-        <a href="#contato">CONTATO</a>
-      </li>
-    </ul>
-  </nav>
+  <section id="inicio">
+    <nav>
+      <p>Minha Página
+        <a href="#inicio"></a>
+      </p>
+      <ul>
+        
+        <li>
+          <a href="#servicos">SERVIÇOS</a>
+        </li>
+        <li>
+          <a href="#clientes">CLIENTES</a>
+        </li>
+        <li>
+          <a href="#parceiros">PARCEIROS</a>
+        </li>
+        <li>
+          <a href="#time">TIME</a>
+        </li>
+        <li>
+          <a href="#contato">CONTATO</a>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  
+
 
 
   <!--<p>Esse e um paragrafo, meu teclado esta sem acentuaçao.</p>
@@ -59,12 +66,13 @@
       faça uma reunião online e já feche o contrato conosco, prazer em servir da maneira correta.</p>
 
     <div>
-      <img src="images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" width="300px">
+      <img src="images/woman-in-green-top-using-macbook-beside-group-of-people-1595392.jpg" class="img_padrao">
     </div>
 
     <div>
-      <img src="images/mobile-phone-samsung-edge-samsung-galaxy-s6-edge-plus-50614.jpg" width="300px">
+      <img src="images/mobile-phone-samsung-edge-samsung-galaxy-s6-edge-plus-50614.jpg"  class="img_padrao">
     </div>
+    <a href="#inicio">INÍCIO</a>
 
 
 
@@ -75,8 +83,9 @@
     <p>Satisfaçao e garantia do serviço</p>
 
     <div>
-      <img src="images/man-and-woman-near-table-3184465.jpg" width="300px">
+      <img src="images/man-and-woman-near-table-3184465.jpg"  class="img_padrao">
     </div>
+    <a href="#inicio">INÍCIO</a>
 
 
   </section>
@@ -87,19 +96,21 @@
 
     <div>
       <a href="https://www.github.com" target="_blank"><!--o target="_blank" abre em nova aba-->
-      <img src="images/photo-of-people-near-wooden-table-3184418.jpg" width="300px">
+      <img src="images/photo-of-people-near-wooden-table-3184418.jpg"  class="img_padrao">
     </a>
     </div>
+    <a href="#inicio">INÍCIO</a>
 
   </section>
 
   <section id="time">
     <h2>TIME</h2>
-    <p> Nosso time é formado por profissionais sérios e competentes mais de 500 anos de experiência somados.</p>
+    <p> Nosso time é formado por profissionais <i class="serios">sérios e competentes</i> mais de <strong>500 anos de experiência somados</strong>.</p>
 
     <div>
-      <img src="images/group-of-women-having-a-meeting-3810754.jpg" width="300px">
+      <img src="images/group-of-women-having-a-meeting-3810754.jpg"  class="img_padrao">
     </div>
+    <a href="#inicio">INÍCIO</a>
 
   </section>
 
@@ -108,13 +119,14 @@
     <p> Entre em contato conosco temos o maior prazer em lhe atender!</p>
 
     <div>
-      <img src="images/email.png" width="130px" height="73x">
+      <img src="images/email.png" class="logo">
       <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
     </div>
     <div>
-      <img src="images/cellphone-cellular-communication-connection-263564.jpg" width="120px" >
+      <img src="images/cellphone-cellular-communication-connection-263564.jpg"class="logo" >
       <p><a href="tel:34991179515">(34) 99117-9515</a></p>
     </div>
+    <a href="#inicio">INÍCIO</a>
     
 
   </section>
