--- a/html5_CSS3/cursobootstrap/index.html
+++ b/html5_CSS3/cursobootstrap/index.html
@@ -34,7 +34,7 @@
         </nav>
         <section id:"quemsomos">
             <div class="container-fluid quem-somos text-center margem">
-                <p>Texto de fala</p>
+                <h3>Quem Somos</h3>
             </div>
 
         </section>
